<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoGet Database for Locus</string>
    <string name="pref_path">Path settings</string>
    <string name="pref_db_title">GeoGet database path</string>
    <string name="pref_db_sum">Path to database GeoGet file (*.db3 file)</string>
    <string name="pref_db_pick_title">Pick database file</string>
    <string name="pref_db_pick_dir_title">Pick GeoGet attach dir</string>
    <string name="pref_attach_title">GeoGet path with attachments</string>
    <string name="pref_attach_sum">Not required. Path to GeoGet folder with geocache attachments (attach folder)</string>

    <string name="pref_filter">Filter settings</string>
    <string name="pref_type_screen_title">Geocache type</string>
    <string name="pref_type_screen_sum">Filter checked types</string>
    <string name="pref_size_screen_title">Geocache size</string>
    <string name="pref_size_screen_sum">Filter checked size</string>
    <string name="pref_diff_screen_title">Geocache difficulty</string>
    <string name="pref_diff_screen_sum">Filter checked difficulty</string>
    <string name="pref_terr_screen_title">Geocache terrain</string>
    <string name="pref_terr_screen_sum">Filter checked terrain</string>

    <string name="pref_nick_title">Nick on Geocaching.com</string>
    <string name="pref_nick_sum">For recognize own geocaches</string>
    <string name="pref_disable_title">Disable geocaches</string>
    <string name="pref_disable_sum">Load disable geocaches to Locus</string>
    <string name="pref_found_title">My found geocaches</string>
    <string name="pref_found_sum">Load my found geocaches to Locus</string>
    <string name="pref_own_title">My own geocaches</string>
    <string name="pref_own_sum">Load my own geocaches to Locus.</string>
    <string name="pref_own_fill"> Fill Geocaching.com nick to enable.</string>
    <string name="pref_archive_title">Archived geocaches</string>
    <string name="pref_archive_sum">Load archived geocaches to Locus</string>
    <string name="pref_logs_title">Logs count</string>
    <string name="pref_logs_sum">Count of last logs, which Locus load from Geoget database</string>
    <string name="pref_logs_error">Count of logs must be number between 0 and 99</string>
    <string name="pref_radius_title">Distance radius</string>
    <string name="pref_radius_sum">Distance radius in km for load geocaches to Locus</string>
    <string name="pref_radius_error">Radius must be number between 0.1 and 9.9 or between 10 and 999</string>
    <string name="pref_limit_title">Geocache count</string>
    <string name="pref_limit_sum">Count of geocaches to load. If value equals 0, limit will not be applied (unlimited).</string>
    <string name="pref_limit_nolimit">no limit</string>
    <string name="pref_limit_error">Limit must be number between 0 (no limit) and 9999</string>
    <string name="pref_locus">Locus settings</string>
    <string name="pref_import_title">Allow import</string>
    <string name="pref_import_sum">Allow import geocaches to Locus</string>
    <string name="pref_livemap_title">Live map</string>
    <string name="pref_livemap_sum">Live loading caches to map (enable in Locus: Settings → Other → Enable periodic updates)</string>

    <string name="geoget_files">GeoGet files</string>
    <string name="loading">Loading</string>
    <string name="geocaches">geocaches</string>
    <string name="loading_dots">Loading…</string>
    <string name="load_from_geoget">Load GeoGet geocaches</string>
    <string name="error">Error!</string>
    <string name="install_it">Locus application not found! Please install!</string>
    <string name="update_it">Newer version of Locus required (>= 1.14.6)! Please update!</string>
    <string name="out_of_memory">Out of memory! Change filter to decrease geocache count!</string>
    <string name="no_external_storage">External storage (SD card) not found!</string>
    <string name="no_db_file">GeoGet database not found! Set it!</string>
    <string name="no_db_file_live">GeoGet database not found! Set it! Turning off Live Map.</string>
    <string name="unable_to_load_geocaches">Unable to load geocaches!</string>
    <string name="unable_to_load_detail">Unable to load geocache detail!</string>
    <string name="no_caches_found">No caches match your filter!</string>
    <string name="pref_about">About</string>
    <string name="pref_donate_title">Donate to development!</string>
    <string name="pref_donate_sum">Do you like this addon? Do you want to support next development? Click and donate some money!</string>
    <string name="support_app">Support GeoGet Database for Locus</string>
    <string name="support_like_it">Do you like GeoGet Database for Locus app?</string>
    <string name="support_rate">Please appreciate the developers adding a 5-stars in Google Play.</string>
    <string name="canceled">Loading canceled!</string>

    <string name="pref_type.traditional">Traditional Cache</string>
    <string name="pref_type.multi">Multi-Cache (Offset Cache)</string>
    <string name="pref_type.mystery">Mystery or Puzzle Caches</string>
    <string name="pref_type.earth">EarthCache</string>
    <string name="pref_type.letter">Letterbox Hybrid</string>
    <string name="pref_type.event">Event Cache</string>
    <string name="pref_type.mega">Mega-Event Cache</string>
    <string name="pref_type.cito">Cache In Trash Out Event</string>
    <string name="pref_type.wig">Wherigo™ Cache</string>
    <string name="pref_type.virtual">Virtual Cache</string>
    <string name="pref_type.webcam">Webcam Cache</string>
    <string name="pref_type.loc">Locationless (Reverse) Cache</string>
    <string name="pref_type.hq">Groundspeak Headquarters Cache</string>
    <string name="pref_type.gps">GPS Adventures Maze Exhibit</string>
    <string name="pref_type.10years">10 Years! Event Cache</string>
    <string name="pref_type.benchmark">Benchmark Hunting</string>
    <string name="pref_type.ape">Project A.P.E. Cache</string>

    <string name="pref_size.micro">Micro</string>
    <string name="pref_size.small">Small</string>
    <string name="pref_size.regular">Regular</string>
    <string name="pref_size.large">Large</string>
    <string name="pref_size.other">Other</string>
    <string name="pref_size.not_chosen">Not Chosen</string>
    
    <string name="pref_diff.one" translatable="false">1</string>
    <string name="pref_diff.onehalf" translatable="false">1.5</string>
    <string name="pref_diff.two" translatable="false">2</string>
    <string name="pref_diff.twohalf" translatable="false">2.5</string>
    <string name="pref_diff.three" translatable="false">3</string>
    <string name="pref_diff.threehalf" translatable="false">3.5</string>
    <string name="pref_diff.four" translatable="false">4</string>
    <string name="pref_diff.fourhalf" translatable="false">4.5</string>
    <string name="pref_diff.five" translatable="false">5</string>        

    <string name="wp_personal_note">Personal note:</string>
    
    <string name="about.version_title">Version</string>
    <string name="about.version_text" translatable="false">3.4.0</string>
    <string name="about.version_click"> - click for changelog</string>
    <string name="about.contact_title">Contact</string>
    <string name="about.contact_text">jerabek.jakub@gmail.com (English or Czech)</string>
    <string name="about.author_title">Authors</string>
    <string name="about.author_text" translatable="false">Jakub Jeřábek (&gt;=3.0.0)\nRadim -Kuratkoo- Vaculík (&lt;3.0.0)</string>
    
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more…</string>
</resources>